--- a/ace-web/package.json
+++ b/ace-web/package.json
@@ -10,8 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/dompurify": "^3.2.0",
+        "@types/marked": "^6.0.0",
         "axios": "^1.8.4",
+        "dompurify": "^3.2.5",
         "gsap": "^3.12.7",
+        "marked": "^15.0.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router-dom": "^7.5.0"
