--- a/ace-api/appsettings.Development.json
+++ b/ace-api/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;port=3306;database=ace;user=root;password=;AllowZeroDateTime=True;ConnectionReset=true;Pooling=false;"
+        "DefaultConnection": "server=localhost;port=3306;database=ace;user=root;password=root;AllowZeroDateTime=True;ConnectionReset=true;Pooling=false;"
     }
 }
